--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.11.0",
 		"react-router-dom": "^5.2.0",
+		"redux": "^4.0.5",
+		"redux-actions": "^2.6.5",
+		"redux-devtools-extension": "^2.13.8",
+		"redux-saga": "^1.1.3",
 		"styled-components": "^5.1.1"
 	},
 	"devDependencies": {
