--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "webpack-dev-server"
 	},
 	"dependencies": {
+		"babel-polyfill": "^6.26.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.11.0",
