--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"axios": "^0.20.0",
 		"babel-polyfill": "^6.26.0",
+		"file-loader": "^6.2.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.11.0",
