--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "webpack-dev-server"
 	},
 	"dependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.12.1",
 		"axios": "^0.20.0",
 		"babel-polyfill": "^6.26.0",
 		"file-loader": "^6.2.0",
