--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "webpack-dev-server"
+		"start": "webpack-dev-server",
+		"build": "webpack --mode production"
 	},
 	"dependencies": {
 		"@babel/plugin-proposal-class-properties": "^7.12.1",
