--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -47,14 +47,14 @@ jobs:
       - name: Build
         run: npm run build
 
-#       - name: Deploy to S3
-#         env:
-#           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Deploy to S3
+        env:
+           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 #         run: |
 #           aws s3 cp \
 #             --recursive \
 #             --region ${{ secrets.AWS_REGION }} \
 #             S3-Files s3://diarystory.site
-      - name: Deploy to s3
+#      - name: Deploy to s3
         run: BUILD_DIRECTORY=build BUCKET_NAME=diarystory.site AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} npm run deploy-aws
