--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -57,4 +57,4 @@ jobs:
 #             --region ${{ secrets.AWS_REGION }} \
 #             S3-Files s3://diarystory.site
 #      - name: Deploy to s3
-        run: BUILD_DIRECTORY=build BUCKET_NAME=diarystory.site AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} npm run deploy-aws
+        run: BUILD_DIRECTORY=build BUCKET_NAME=diarystory.site AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} npm run diarystory.site
