--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -51,10 +51,4 @@ jobs:
         env:
            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#         run: |
-#           aws s3 cp \
-#             --recursive \
-#             --region ${{ secrets.AWS_REGION }} \
-#             S3-Files s3://diarystory.site
-#      - name: Deploy to s3
-        run: BUILD_DIRECTORY=build BUCKET_NAME=diarystory.site AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} npm run diarystory.site
+        run: aws s3 sync . s3://diarystory.site --delete
