--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"redux-actions": "^2.6.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-saga": "^1.1.3",
-		"styled-components": "^5.1.1"
+		"styled-components": "^5.1.1",
+		"styled-media-query": "^2.1.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.1",
